--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,68 @@
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-XXXXXXXX-X', 'auto');
-  ga('send', 'pageview');
+  <!-- Add cookie consent css & js -->
+  <link rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js"
+      data-cfasync="false"></script>
+
+  <!-- Add google analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXX-X"></script>
+
+  <script>
+      // Reads the value of a cookie by name or returns empty string
+      function getCookie(name) {
+          var b = document.cookie.match('(^|[^;]+)\\s*' + name + '\\s*=\\s*([^;]+)');
+          return b ? b.pop() : '';
+      }
+
+      // Actually starting analytics up
+      function addAnalytics() {
+          window.dataLayer = window.dataLayer || [];
+
+          function gtag() {
+              dataLayer.push(arguments);
+          }
+
+          gtag('js', new Date());
+          gtag('config', 'G-B0NE9W4G9S');
+      }
+
+      // Waiting for the load event
+      window.addEventListener("load", function () {
+          // Reading "cookieconsent_status" cookie
+          const cookieConsent = getCookie('cookieconsent_status');
+
+          // Start analytics if user consented or did not deny
+          if (cookieConsent === 'allow' || cookieConsent === '') {
+              addAnalytics();
+          }
+
+          // Initialise cookie consent banner
+          window.cookieconsent.initialise({
+              "palette": {
+                  "popup": {
+                      "background": "#efefef",
+                      "text": "#404040"
+                  },
+                  "button": {
+                      "background": "#8ec760",
+                      "text": "#ffffff"
+                  }
+              },
+              "type": "opt-out",
+              "content": {
+                  "allow": "Approve",
+                  "dismiss": "Approve",
+                  "deny": "Reject"
+              },
+              // Reload the page on user choice to make sure cookie is set
+              onStatusChange: function (status, chosenBefore) {
+                  location.reload();
+              }
+          })
+      });
+  </script>
+  
 </script>
